# mod2nml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
mod2nml/: cli.py  nml_helpers.py  nmodl_nml.py  rename_visitor.py  symbolic.py
tests/: nml_helpers.py  nmodl_nml.py  symbolic.py  test_conductances.py  test_infoextractor.py  test_libneuroml.py  test_nmlgen.py  test_symbolic_matching.py  test_visitors.py
tests/sample_mods/: hh.mod  hh_ab.mod  hh_clean.mod  hh_tauinf.mod  k_hh.mod  k_hh.nml  k_hh_ab.mod  leak_hh.mod  na_hh.mod
